tests/snapshots/execution_spec__test-invalid-server.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid type: string \"8000\", expected u16",
    "trace": [
      "@server",
      "port"
    ],
    "description": null
  }
]
