tests/snapshots/execution_spec__test-js-hello-world.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  hello: String
  hi: String
}

schema {
  query: Query
}
