tests/snapshots/execution_spec__test-js-multiple-scripts.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Only one script link is allowed",
    "trace": [
      "schema",
      "@link"
    ],
    "description": null
  }
]
