tests/snapshots/execution_spec__test-js-request-multiple-on-request-handlers.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": "its intercepted foo",
      "bar": "its intercepted bar"
    }
  }
}
