tests/snapshots/execution_spec__test-js-request-multiple-on-request-handlers.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  bar: String
  foo: String
}

scalar Url

schema {
  query: Query
}
